--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
                 
             </div>
-            <p class="footer__copy">&#169;@RamjeeTiwari. All rigths reserved</p>
+            <p class="footer__copy">&#169;RamjeeTiwari. All rigths reserved</p>
         </footer>
 
 
