--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I'am Ram Jee Tiwari</h2>
-                        <p class="about__text">I am a Coder,Front-End-Developer and Web-Developer.I am a B.Tech student and my stream is Computer Science and Engineering.Here you'll see my journey as a Computer Science Student.</p>           
+                        <p class="about__text">I am a Coder,Front-End-Developer,Web-Developer and Entry Level Engineer.I am a B.Tech student and my stream is Computer Science and Engineering.Here you'll see my journey as a Computer Science Student.</p>           
                     </div>                                   
                 </div>
             </section>
