--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         <p class="skills__text">Here my some Profesional skills are given below with the help of these skills we create many projects some of them are mentioned here.My Skills are given as.......</p>
                         <div class="skills__data">
                             <div class="skills__names">
-                                <i class='fab fa-java' style='font-size:48px;color:red'></i>
+                                <i class='fab fa-java'></i>
                                 <span class="skills__name">JAVA</span>
                             </div>
                             <div class="skills__bar skills__html">
