--- a/index.html
+++ b/index.html
@@ -158,7 +158,22 @@
             </section>
 
             <!--===== WORK =====-->
-            <section class="work section" id="work">
+             <section class="work section" id="work">
+                <h2 class="section-title">Projects</h2>
+
+                <div class="work__container bd-grid">
+                    <a href="" class="work__img">
+                        <h1>Project 1</h1>
+                        <img src="img/cart.png " alt="">
+                        <h2>E-Commerce</h2>
+                    </a> 
+                    <br>
+                    <a href="" class="work__img">
+                        <h1>Project 2</h1>
+                        <img src="img/mypro.png" alt="" >
+                        <h2>Spotify</h2>
+                    </a>
+            <!---<section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
@@ -179,7 +194,7 @@
                     </a>
                     <a href="" class="work__img">
                         <img src="img/work6.jpg" alt="">
-                    </a>
+                    </a>-->
                 </div>
             </section>
 
