--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
                 <div class="work__container bd-grid">
                     <a href="" class="work__img">
                         <h1>Project 1</h1>
-                        <img src="WhatsApp Image 2024-08-31 at 11.05.32 AM(1).jpeg" alt="">
+                        <img src="img/WhatsApp Image 2024-08-31 at 11.05.32 AM(1).jpeg" alt="">
                         <h2>E-Commerce</h2>
                     </a> 
                     <br>
                     <a href="" class="work__img">
                         <h1>Project 2</h1>
-                        <img src="WhatsApp Image 2024-08-31 at 11.05.32 AM.jpeg" alt="" >
+                        <img src="img/WhatsApp Image 2024-08-31 at 11.05.32 AM.jpeg" alt="" >
                         <h2>Spotify</h2>
                     </a>
             <!---<section class="work section" id="work">
