--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
                         <img src="img/mypro.jpeg" alt="" >
                         <h2>Spotify</h2>
                     </a>
+                    <br>
+                    <a href="" class="work__img">
+                        <h1>Project 3</h1>
+                        <img src="img/robo.jpeg" alt="" >
+                        <h2>Semi Functional Robot</h2>
+                    </a>
             <!---<section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
 
